--- a/src/index.html
+++ b/src/index.html
@@ -8,21 +8,21 @@
     <title>Demo</title>
     <meta name="description" content="Demo">
     <meta name="author" content="Yang Bai<yangb@pansoftware.com.au>">
-
     <link rel="stylesheet" href="styles/main.css">
-
 </head>
 
 <body>
     <div class="root">
         <header class="clearfix rootHeader">
-            <h1></h1> 
+            <h1></h1>
         </header>
         <aside>Open the console in development test tool to see more information</aside>
-        <div id="appContainer">            
+        <div id="appContainer">
         </div>
     </div>
+    <!-- build:script main -->
     <script data-main="scripts/main" src="lib/requirejs/require.js"></script>
+    <!-- /build -->
 </body>
 
 </html>
