--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Demo</title>
-    <meta name="description" content="Demo">
+    <title>RealWork Sample</title>
+    <meta name="description" content="Code demonstration of a common input screen in the RealWork">
     <meta name="author" content="Yang Bai<yangb@pansoftware.com.au>">
     <link rel="stylesheet" href="styles/main.css">
 </head>
