--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>RealWork Sample</title>
     <meta name="description" content="Code demonstration of a common input screen in the RealWork">
-    <meta name="author" content="Yang Bai<yangb@pansoftware.com.au>">
+    <meta name="author" content="Yang Bai<me@codeboy.im>">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
