optimize build, hash main.css and main.js

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
     <title>RealWork Sample</title>
     <meta name="description" content="Code demonstration of a common input screen in the RealWork">
     <meta name="author" content="Yang Bai<me@codeboy.im>">
+    <!-- build:style main -->
     <link rel="stylesheet" href="styles/main.css">
+    <!-- /build -->
 </head>
 
 <body>
