add a <link/> to prevent favicon request

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <title>RealWork Sample</title>
     <meta name="description" content="Code demonstration of a common input screen in the RealWork">
     <meta name="author" content="Yang Bai<me@codeboy.im>">
